--- a/Model_name_company.ipynb
+++ b/Model_name_company.ipynb
@@ -5,12 +5,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# model to learn and predict company name and employer name from card image"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
